Content-Based Filtering codes were arranged.

--- a/Content-Based-Filtering/Paper_Recommendation_System_v2.0.ipynb
+++ b/Content-Based-Filtering/Paper_Recommendation_System_v2.0.ipynb
@@ -2422,7 +2422,7 @@
     "    # Sort the paper \n",
     "    sig_scores = sorted(sig_scores, key=lambda x: x[1], reverse=True)\n",
     "\n",
-    "    # Scores of the 10 most similar movies\n",
+    "    # Scores of the 10 most similar papers\n",
     "    sig_scores = sig_scores[1:11]\n",
     "\n",
     "    # Paper indices\n",
