--- a/Content-Based-Filtering/Paper_Recommendation_System_v3.0.ipynb
+++ b/Content-Based-Filtering/Paper_Recommendation_System_v3.0.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +155,7 @@
        "4              A Deep Reinforcement Learning Chatbot  2017  "
       ]
      },
-     "execution_count": 36,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 38,
    "metadata": {
     "scrolled": true
    },
@@ -251,7 +251,7 @@
        "Length: 6000, dtype: int64"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -310,7 +310,7 @@
        "(6000, 47152)"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -369,7 +369,7 @@
     "    # Sort the paper \n",
     "    sig_scores = sorted(sig_scores, key=lambda x: x[1], reverse=True)\n",
     "\n",
-    "    # Scores of the 10 most similar movies\n",
+    "    # Scores of the 10 most similar papers\n",
     "    sig_scores = sig_scores[1:11]\n",
     "\n",
     "    # Paper indices\n",
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -400,7 +400,7 @@
        "Name: title, dtype: object"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -431,7 +431,7 @@
        "Name: 3, dtype: object"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
