Collaborative-Filterin was updated.

--- a/Collabarative-Filtering/Collabarative_Filtering_Rating_Matrix.ipynb
+++ b/Collabarative-Filtering/Collabarative_Filtering_Rating_Matrix.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +164,7 @@
        "4              A Deep Reinforcement Learning Chatbot  2017  "
       ]
      },
-     "execution_count": 62,
+     "execution_count": 128,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +200,7 @@
        "      dtype='object', name='id', length=6000)"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 130,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +284,7 @@
        "4       5  farnborough  NULL"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 131,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
@@ -368,7 +368,7 @@
        "4      52  1709.02349v2            7"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 132,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [
     {
@@ -473,7 +473,7 @@
        "4      21  1603.03827v1            9  ferrol / spain  46"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 134,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [
     {
@@ -661,7 +661,7 @@
        "4  Sequential Short-Text Classification with Recu...  2016  "
       ]
      },
-     "execution_count": 69,
+     "execution_count": 136,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -672,16 +672,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(999, 13)"
+       "(998, 13)"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 137,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -692,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -705,16 +705,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(999, 13)"
+       "(998, 13)"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 139,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -725,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -736,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [
     {
@@ -809,7 +809,7 @@
        "4      21  1603.03827v1            9"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 141,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -820,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [
     {
@@ -879,7 +879,7 @@
        "323      10  1505.01809v3            6"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 142,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -890,7 +890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -900,7 +900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -922,7 +922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -931,9 +931,15 @@
     "    author = papers_df.at[paperID,\"author\"]\n",
     "    return title, author\n",
     "\n",
-    "def favePaper(user,N):\n",
-    "    userRatings = merge_df[merge_df[\"userID\"]==user]\n",
+    "def GetPaperByUserID(userID,N):\n",
+    "    userRatings = merge_df[merge_df[\"userID\"]==userID]\n",
     "    sortedRatings = pd.DataFrame.sort_values(userRatings,['paperRating'],ascending=[0])[:N] \n",
+    "    sortedRatings[\"title\"] = sortedRatings[\"id\"].apply(paperMeta)\n",
+    "    return sortedRatings\n",
+    "\n",
+    "def GetUserByPaperID(paperID,N):\n",
+    "    paperRatings = merge_df[merge_df[\"id\"]==paperID]\n",
+    "    sortedRatings = pd.DataFrame.sort_values(paperRatings,['paperRating'],ascending=[0])[:N] \n",
     "    sortedRatings[\"title\"] = sortedRatings[\"id\"].apply(paperMeta)\n",
     "    return sortedRatings\n",
     "\n",
@@ -949,16 +955,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(199, 999)"
+       "(199, 996)"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 146,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -969,7 +975,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [
     {
@@ -979,7 +985,7 @@
        " \"[{'name': 'Ahmed Osman'}, {'name': 'Wojciech Samek'}]\")"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 147,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -990,7 +996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [
     {
@@ -1022,39 +1028,32 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>321</th>\n",
-       "      <td>10</td>\n",
-       "      <td>1510.08983v2</td>\n",
-       "      <td>10</td>\n",
-       "      <td>(Highway Long Short-Term Memory RNNs for Dista...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>322</th>\n",
-       "      <td>10</td>\n",
-       "      <td>1802.07426v1</td>\n",
+       "      <th>190</th>\n",
+       "      <td>100</td>\n",
+       "      <td>1305.1027v2</td>\n",
        "      <td>6</td>\n",
-       "      <td>(Generalization in Machine Learning via Analyt...</td>\n",
+       "      <td>(Regret Bounds for Reinforcement Learning with...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>323</th>\n",
-       "      <td>10</td>\n",
-       "      <td>1505.01809v3</td>\n",
-       "      <td>6</td>\n",
-       "      <td>(Language Models for Image Captioning: The Qui...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>325</th>\n",
-       "      <td>10</td>\n",
-       "      <td>1504.06825v1</td>\n",
+       "      <th>189</th>\n",
+       "      <td>100</td>\n",
+       "      <td>1402.0929v3</td>\n",
        "      <td>5</td>\n",
-       "      <td>(Comparison of Training Methods for Deep Neura...</td>\n",
+       "      <td>(Input Warping for Bayesian Optimization of No...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>324</th>\n",
-       "      <td>10</td>\n",
-       "      <td>1704.06885v1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>(A General Theory for Training Learning Machin...</td>\n",
+       "      <th>188</th>\n",
+       "      <td>100</td>\n",
+       "      <td>1611.00454v1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>(Collaborative Recurrent Autoencoder: Recommen...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>191</th>\n",
+       "      <td>100</td>\n",
+       "      <td>1206.6434v1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>(A Generative Process for Sampling Contractive...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1062,32 +1061,100 @@
       ],
       "text/plain": [
        "     userID            id  paperRating  \\\n",
-       "321      10  1510.08983v2           10   \n",
-       "322      10  1802.07426v1            6   \n",
-       "323      10  1505.01809v3            6   \n",
-       "325      10  1504.06825v1            5   \n",
-       "324      10  1704.06885v1            3   \n",
+       "190     100   1305.1027v2            6   \n",
+       "189     100   1402.0929v3            5   \n",
+       "188     100  1611.00454v1            1   \n",
+       "191     100   1206.6434v1            1   \n",
        "\n",
        "                                                 title  \n",
-       "321  (Highway Long Short-Term Memory RNNs for Dista...  \n",
-       "322  (Generalization in Machine Learning via Analyt...  \n",
-       "323  (Language Models for Image Captioning: The Qui...  \n",
-       "325  (Comparison of Training Methods for Deep Neura...  \n",
-       "324  (A General Theory for Training Learning Machin...  "
+       "190  (Regret Bounds for Reinforcement Learning with...  \n",
+       "189  (Input Warping for Bayesian Optimization of No...  \n",
+       "188  (Collaborative Recurrent Autoencoder: Recommen...  \n",
+       "191  (A Generative Process for Sampling Contractive...  "
       ]
      },
-     "execution_count": 105,
+     "execution_count": 148,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "favePaper(10, 5)"
+    "GetPaperByUserID(100, 10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 149,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>userID</th>\n",
+       "      <th>id</th>\n",
+       "      <th>paperRating</th>\n",
+       "      <th>title</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>40</th>\n",
+       "      <td>76</td>\n",
+       "      <td>1609.06492v1</td>\n",
+       "      <td>8</td>\n",
+       "      <td>(Document Image Coding and Clustering for Scri...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39</th>\n",
+       "      <td>32</td>\n",
+       "      <td>1609.06492v1</td>\n",
+       "      <td>7</td>\n",
+       "      <td>(Document Image Coding and Clustering for Scri...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    userID            id  paperRating  \\\n",
+       "40      76  1609.06492v1            8   \n",
+       "39      32  1609.06492v1            7   \n",
+       "\n",
+       "                                                title  \n",
+       "40  (Document Image Coding and Clustering for Scri...  \n",
+       "39  (Document Image Coding and Clustering for Scri...  "
+      ]
+     },
+     "execution_count": 149,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "GetUserByPaperID('1609.06492v1', 10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
    "metadata": {},
    "outputs": [
     {
@@ -1101,21 +1168,26 @@
     {
      "data": {
       "text/plain": [
-       "0    (Dense Prediction on Sequences with Time-Dilat...\n",
+       "0    (Density estimation using Real NVP, [{'name': ...\n",
        "1    (Domain Adaptive Neural Networks for Object Re...\n",
-       "2    (Pointing the Unknown Words, [{'name': 'Caglar...\n",
-       "3    (Density estimation using Real NVP, [{'name': ...\n",
+       "2    (Highway Long Short-Term Memory RNNs for Dista...\n",
+       "3    (Pointing the Unknown Words, [{'name': 'Caglar...\n",
        "4    (Learning values across many orders of magnitu...\n",
+       "5    (Predicting the Severity of Breast Masses with...\n",
+       "6    (Hybrid Linear Modeling via Local Best-fit Fla...\n",
+       "7    (Generating Factoid Questions With Recurrent N...\n",
+       "8    (Differentiable Scheduled Sampling for Credit ...\n",
+       "9    (Discriminative Learning via Semidefinite Prob...\n",
        "Name: id, dtype: object"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 150,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "topN(10, 5)"
+    "topN(100,10)"
    ]
   },
   {
