Hybrid was updated.

--- a/Hybrid-System/Hybrid_Method_v1.0.ipynb
+++ b/Hybrid-System/Hybrid_Method_v1.0.ipynb
@@ -500,7 +500,7 @@
     "from lightfm.data import Dataset\n",
     "paper_dataset=Dataset()\n",
     "paper_dataset.fit(merge_df.userID.values,merge_df.id.values,item_features = merge_df['author'].values)\n",
-    "# fit ratings, book isbn and book features to the model"
+    "# fit ratings, paper id and paper features to the model"
    ]
   },
   {
@@ -615,7 +615,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#retriving the mappings of isbn and \n",
+    "#retriving the mappings of paper id\n",
     "item_ids = list(paper_dataset.mapping()[0].values())"
    ]
   },
@@ -996,7 +996,7 @@
     }
    ],
    "source": [
-    "# checking what user 276847 has rated previously\n",
+    "# checking what user 1 has rated previously\n",
     "merge_df[merge_df.userID == 1].head(10)"
    ]
   }
