Hybrid was changed.

--- a/Hybrid-System/Hybrid_Method_v1.0.ipynb
+++ b/Hybrid-System/Hybrid_Method_v1.0.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +160,7 @@
        "4              A Deep Reinforcement Learning Chatbot  2017  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +244,7 @@
        "4       5  farnborough  NULL"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -441,7 +441,7 @@
        "4  Dual Recurrent Attention Units for Visual Ques...  2018  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -452,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -629,7 +629,7 @@
        "8  Dual Recurrent Attention Units for Visual Ques...  2018  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -640,28 +640,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.preprocessing import OneHotEncoder\n",
     "encode = OneHotEncoder(sparse=True)\n",
-    "item_features=encode.fit_transform(merge_df[['author','id']])"
+    "item_features=encode.fit_transform(merge_df[['paperRating','id']])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<1787x1965 sparse matrix of type '<class 'numpy.float64'>'\n",
+       "<1787x1009 sparse matrix of type '<class 'numpy.float64'>'\n",
        "\twith 3574 stored elements in Compressed Sparse Row format>"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -672,19 +672,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\veyso\\anaconda3\\envs\\recommendation\\lib\\site-packages\\lightfm\\_lightfm_fast.py:9: UserWarning: LightFM was compiled without OpenMP support. Only a single thread will be used.\n",
+      "  warnings.warn('LightFM was compiled without OpenMP support. '\n"
+     ]
+    }
+   ],
    "source": [
     "from lightfm.data import Dataset\n",
     "paper_dataset=Dataset()\n",
-    "paper_dataset.fit(merge_df.userID.values,merge_df.id.values,item_features = merge_df['author'].values)\n",
+    "paper_dataset.fit(merge_df.userID.values,merge_df.id.values,item_features = merge_df['paperRating'].values)\n",
     "# fit ratings, paper id and paper features to the model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -697,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -707,7 +716,7 @@
        "\twith 1787 stored elements in COOrdinate format>"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -719,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -729,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -744,14 +753,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hybrid training set AUC: 0.94488025\n"
+      "Hybrid training set AUC: 0.9462883\n"
      ]
     }
    ],
@@ -764,14 +773,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hybrid test set AUC: 0.7690436\n"
+      "Hybrid test set AUC: 0.7689488\n"
      ]
     }
    ],
@@ -782,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -792,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -803,7 +812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -833,29 +842,29 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>468</th>\n",
-       "      <td>1705.06824v1</td>\n",
-       "      <td>0.797406</td>\n",
+       "      <th>713</th>\n",
+       "      <td>1707.03017v5</td>\n",
+       "      <td>1.748573</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>28</th>\n",
-       "      <td>1511.08495v3</td>\n",
-       "      <td>0.340458</td>\n",
+       "      <th>980</th>\n",
+       "      <td>1512.04860v1</td>\n",
+       "      <td>1.282389</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>211</th>\n",
-       "      <td>1606.02979v2</td>\n",
-       "      <td>0.169575</td>\n",
+       "      <th>623</th>\n",
+       "      <td>1506.02078v2</td>\n",
+       "      <td>0.865425</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>402</th>\n",
-       "      <td>1302.6613v1</td>\n",
-       "      <td>0.061374</td>\n",
+       "      <th>544</th>\n",
+       "      <td>1608.00218v1</td>\n",
+       "      <td>0.807027</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>61</th>\n",
-       "      <td>1509.08634v1</td>\n",
-       "      <td>-0.055145</td>\n",
+       "      <th>602</th>\n",
+       "      <td>1509.04265v2</td>\n",
+       "      <td>0.236985</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -863,14 +872,14 @@
       ],
       "text/plain": [
        "         paper_id  recommendation_scores\n",
-       "468  1705.06824v1               0.797406\n",
-       "28   1511.08495v3               0.340458\n",
-       "211  1606.02979v2               0.169575\n",
-       "402   1302.6613v1               0.061374\n",
-       "61   1509.08634v1              -0.055145"
+       "713  1707.03017v5               1.748573\n",
+       "980  1512.04860v1               1.282389\n",
+       "623  1506.02078v2               0.865425\n",
+       "544  1608.00218v1               0.807027\n",
+       "602  1509.04265v2               0.236985"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -883,7 +892,205 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "recommend_df = pd.DataFrame(columns=merge_df.columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for x in range(0,5):\n",
+    "    recommend_df = recommend_df.append(merge_df.loc[merge_df.id == pred_df.iloc[x]['paper_id']])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>userID</th>\n",
+       "      <th>id</th>\n",
+       "      <th>paperRating</th>\n",
+       "      <th>Location</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>author</th>\n",
+       "      <th>day</th>\n",
+       "      <th>link</th>\n",
+       "      <th>month</th>\n",
+       "      <th>summary</th>\n",
+       "      <th>tag</th>\n",
+       "      <th>title</th>\n",
+       "      <th>year</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1713</th>\n",
+       "      <td>85</td>\n",
+       "      <td>1707.03017v5</td>\n",
+       "      <td>7</td>\n",
+       "      <td>london</td>\n",
+       "      <td>41</td>\n",
+       "      <td>[{'name': 'Ethan Perez'}, {'name': 'Harm de Vr...</td>\n",
+       "      <td>10</td>\n",
+       "      <td>[{'rel': 'alternate', 'href': 'http://arxiv.or...</td>\n",
+       "      <td>7</td>\n",
+       "      <td>Achieving artificial visual reasoning - the ab...</td>\n",
+       "      <td>[{'term': 'cs.CV', 'scheme': 'http://arxiv.org...</td>\n",
+       "      <td>Learning Visual Reasoning Without Strong Priors</td>\n",
+       "      <td>2017</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1980</th>\n",
+       "      <td>11</td>\n",
+       "      <td>1512.04860v1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>melbourne</td>\n",
+       "      <td>14</td>\n",
+       "      <td>[{'name': 'Marc G. Bellemare'}, {'name': 'Geor...</td>\n",
+       "      <td>15</td>\n",
+       "      <td>[{'rel': 'alternate', 'href': 'http://arxiv.or...</td>\n",
+       "      <td>12</td>\n",
+       "      <td>This paper introduces new optimality-preservin...</td>\n",
+       "      <td>[{'term': 'cs.AI', 'scheme': 'http://arxiv.org...</td>\n",
+       "      <td>Increasing the Action Gap: New Operators for R...</td>\n",
+       "      <td>2015</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1618</th>\n",
+       "      <td>191</td>\n",
+       "      <td>1506.02078v2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>berlin</td>\n",
+       "      <td>40</td>\n",
+       "      <td>[{'name': 'Andrej Karpathy'}, {'name': 'Justin...</td>\n",
+       "      <td>5</td>\n",
+       "      <td>[{'rel': 'alternate', 'href': 'http://arxiv.or...</td>\n",
+       "      <td>6</td>\n",
+       "      <td>Recurrent Neural Networks (RNNs), and specific...</td>\n",
+       "      <td>[{'term': 'cs.LG', 'scheme': 'http://arxiv.org...</td>\n",
+       "      <td>Visualizing and Understanding Recurrent Networks</td>\n",
+       "      <td>2015</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1524</th>\n",
+       "      <td>194</td>\n",
+       "      <td>1608.00218v1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>lake forest</td>\n",
+       "      <td>NULL</td>\n",
+       "      <td>[{'name': 'Ilija Ilievski'}, {'name': 'Jiashi ...</td>\n",
+       "      <td>31</td>\n",
+       "      <td>[{'rel': 'alternate', 'href': 'http://arxiv.or...</td>\n",
+       "      <td>7</td>\n",
+       "      <td>Recently, several optimization methods have be...</td>\n",
+       "      <td>[{'term': 'cs.LG', 'scheme': 'http://arxiv.org...</td>\n",
+       "      <td>Hyperparameter Transfer Learning through Surro...</td>\n",
+       "      <td>2016</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1594</th>\n",
+       "      <td>192</td>\n",
+       "      <td>1509.04265v2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>sunnyvale</td>\n",
+       "      <td>NULL</td>\n",
+       "      <td>[{'name': 'Gabriel Prat Masramon'}, {'name': '...</td>\n",
+       "      <td>12</td>\n",
+       "      <td>[{'rel': 'alternate', 'href': 'http://arxiv.or...</td>\n",
+       "      <td>9</td>\n",
+       "      <td>Feature weighting algorithms try to solve a pr...</td>\n",
+       "      <td>[{'term': 'cs.LG', 'scheme': 'http://arxiv.org...</td>\n",
+       "      <td>Double Relief with progressive weighting function</td>\n",
+       "      <td>2015</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     userID            id paperRating     Location   Age  \\\n",
+       "1713     85  1707.03017v5           7       london    41   \n",
+       "1980     11  1512.04860v1           1    melbourne    14   \n",
+       "1618    191  1506.02078v2           2       berlin    40   \n",
+       "1524    194  1608.00218v1           3  lake forest  NULL   \n",
+       "1594    192  1509.04265v2           2    sunnyvale  NULL   \n",
+       "\n",
+       "                                                 author day  \\\n",
+       "1713  [{'name': 'Ethan Perez'}, {'name': 'Harm de Vr...  10   \n",
+       "1980  [{'name': 'Marc G. Bellemare'}, {'name': 'Geor...  15   \n",
+       "1618  [{'name': 'Andrej Karpathy'}, {'name': 'Justin...   5   \n",
+       "1524  [{'name': 'Ilija Ilievski'}, {'name': 'Jiashi ...  31   \n",
+       "1594  [{'name': 'Gabriel Prat Masramon'}, {'name': '...  12   \n",
+       "\n",
+       "                                                   link month  \\\n",
+       "1713  [{'rel': 'alternate', 'href': 'http://arxiv.or...     7   \n",
+       "1980  [{'rel': 'alternate', 'href': 'http://arxiv.or...    12   \n",
+       "1618  [{'rel': 'alternate', 'href': 'http://arxiv.or...     6   \n",
+       "1524  [{'rel': 'alternate', 'href': 'http://arxiv.or...     7   \n",
+       "1594  [{'rel': 'alternate', 'href': 'http://arxiv.or...     9   \n",
+       "\n",
+       "                                                summary  \\\n",
+       "1713  Achieving artificial visual reasoning - the ab...   \n",
+       "1980  This paper introduces new optimality-preservin...   \n",
+       "1618  Recurrent Neural Networks (RNNs), and specific...   \n",
+       "1524  Recently, several optimization methods have be...   \n",
+       "1594  Feature weighting algorithms try to solve a pr...   \n",
+       "\n",
+       "                                                    tag  \\\n",
+       "1713  [{'term': 'cs.CV', 'scheme': 'http://arxiv.org...   \n",
+       "1980  [{'term': 'cs.AI', 'scheme': 'http://arxiv.org...   \n",
+       "1618  [{'term': 'cs.LG', 'scheme': 'http://arxiv.org...   \n",
+       "1524  [{'term': 'cs.LG', 'scheme': 'http://arxiv.org...   \n",
+       "1594  [{'term': 'cs.LG', 'scheme': 'http://arxiv.org...   \n",
+       "\n",
+       "                                                  title  year  \n",
+       "1713    Learning Visual Reasoning Without Strong Priors  2017  \n",
+       "1980  Increasing the Action Gap: New Operators for R...  2015  \n",
+       "1618   Visualizing and Understanding Recurrent Networks  2015  \n",
+       "1524  Hyperparameter Transfer Learning through Surro...  2016  \n",
+       "1594  Double Relief with progressive weighting function  2015  "
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "recommend_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1161,7 +1368,7 @@
        "1229  A Conformal Prediction Approach to Explore Fun...  2013  "
       ]
      },
-     "execution_count": 51,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
